# MCP-Server

./: .gitignore  README.md  demo_client.py  mcp_config.json  pyproject.toml  simple_demo.py  test_cline_connection.py  test_complete.py  test_interactive.py  test_manual.py  test_server.py  test_simple.py
mcp_client/: README.md  client.py
mcp_hello_server/: __init__.py  main.py
